--- a/static/css/style.css
+++ b/static/css/style.css
@@ -44,6 +44,7 @@
   box-sizing: border-box;
 }
 
+
 html {
   /* font-family: sans-serif; */
   font-family: 'Roboto Condensed', sans-serif;
@@ -54,15 +55,15 @@ html {
 
 /* body de la page en général */
 
-body {
-  /* font-family: "Open Sans", Arial, sans-serif; */
+/* body {
+  font-family: "Open Sans", Arial, sans-serif;
   font-size: 16px;
   line-height: 1.8;
   font-weight: bold;
-  /* color: rgba(255, 255, 255, 0.4); */
-  /* background: #160f30; */
+  color: rgba(255, 255, 255, 0.4);
+  background: #160f30;
   margin: 0;
-}
+} */
 
 body {
   margin: 0;
@@ -72,7 +73,7 @@ body {
   line-height: 1.5;
   color: #160f30;
   text-align: left;
-  background-color: #ffffff;
+  background-color: #f1f1f1;
 }
 
 article,
@@ -5433,6 +5434,7 @@ input[type="button"].btn-block {
 }
 
 .card-img-top {
+  height: 150px;
   width: 100%;
   border-top-left-radius: calc(0.25rem - 1px);
   border-top-right-radius: calc(0.25rem - 1px);
@@ -12172,7 +12174,7 @@ h5,
 .dropdown .dropdown-menu .dropdown-item {
   font-size: 13px;
   /* color: rgba(0, 0, 0, 0.7); */
-  color: var(--white);
+  color: var(--dark);
   font-weight: 500;
 }
 
@@ -13972,8 +13974,8 @@ h5,
 
 .ftco-navbar-light .navbar-nav>.nav-item .dropdown-menu {
   border: none;
-  background: var(--primary);
-  color: #fefefe;
+  background: var(--white);
+  color: var(--dark);
   -webkit-box-shadow: 0px 10px 34px -20px rgba(0, 0, 0, 0.41);
   -moz-box-shadow: 0px 10px 34px -20px rgba(0, 0, 0, 0.41);
   box-shadow: 0px 10px 34px -20px rgba(0, 0, 0, 0.41);
