machine en panne

--- a/accueil/templates/index.html
+++ b/accueil/templates/index.html
@@ -390,7 +390,7 @@
                aux Comores</h2>
             <div id="" class="no-uicustom barre mb-3 animated fadeInUp"></div>
             <div class="row">
-               <div class="col-md-12 col-sm-12 col-lg-12 col-12 justify-left">
+               <div class="col-md-7 col-sm-7 col-lg-7 col-12 justify-left">
                   <div class="mb-5 description-accueil">
                      <p class="mb-2 animated fadeInLeft">Adoptez le type de transport selon votre destination </p>
                      <p class="mb-2 animated fadeInLeft">Choisissez la destination et les dates de votre prochain voyage
@@ -402,31 +402,24 @@
                      <a href="#informations-supplementaire" class="btn btn-outline-warning mt-5 px-lg-5 py-lg-3">Lire plus <i class="ion-ios-arrow-round-forward"></i> <i
                            class="ion-ios-arrow-round-forward"></i></a>
                   </div>
+               </div>
+               <div class="col-lg-5">
+                  <img src="{% static "images/carte_1.png" %}" class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}" alt="">
+               </div>
+               <div class="col-12">
                   <div class=" animated fadeInUp">
-                     <!-- <div class="col-md-4 col-sm-4 col-lg-4 col-4">
-                        <h4 class="text-info description-bouton">Déplacement inter-villes</h4>
-                        <a href="" type="button" class="btn btn-warning px-lg-5 py-lg-2" data-toggle="modal"
-                           data-target="#bus">Bus</a>
-                     </div> -->
-                     <div class="">
-                        <!-- <h4 class="text-center text-info description-bouton">Déplacement inter-îles</h4> -->
-                        <div class="d-flex justify-content-end">
-                           <div class="">
-                              <!-- <a href="" type="bytton" class="btn btn-primary px-lg-5 py-lg-2"
-                                 data-toggle="modal" data-target="#avion">Avion </a> -->
-                                 <a href="" type="bytton" class="btn btn-info mr-5 btn-formulaire-achat"
-                                            data-toggle="modal" data-target="#tableau-bord-arrivees">Arrivées <i
-                                                class="ion-ios-arrow-round-down"></i> <i
-                                                class="ion-ios-arrow-round-down"></i></a>
-                           </div>
-                           <div class="">
-                              <!-- <a href="" type="button" class="btn btn-info px-lg-5 py-lg-2"
-                                 data-toggle="modal" data-target="#bateau">Bateau</a> -->
-                                 <a href="" type="button" class="btn btn-primary btn-formulaire-achat"
-                                            data-toggle="modal" data-target="#tableau-bord-departs">Départs <i
-                                                class="ion-ios-arrow-round-up"></i> <i
-                                                class="ion-ios-arrow-round-up"></i></a>
-                           </div>
+                     <div class="d-flex justify-content-end">
+                        <div class="">
+                              <a href="" type="bytton" class="btn btn-info mr-5 btn-formulaire-achat"
+                                         data-toggle="modal" data-target="#tableau-bord-arrivees">Arrivées <i
+                                             class="ion-ios-arrow-round-down"></i> <i
+                                             class="ion-ios-arrow-round-down"></i></a>
+                        </div>
+                        <div class="">
+                           <a href="" type="button" class="btn btn-primary btn-formulaire-achat" data-toggle="modal" data-target="#tableau-bord-departs">Départs 
+                              <i class="ion-ios-arrow-round-up"></i> 
+                              <i class="ion-ios-arrow-round-up"></i>
+                           </a>
                         </div>
                      </div>
                   </div>
